@@ -1,4 +1,4 @@
 use strict;
-use warnings;
+use warnings FATAL => 'all';
 use Test::More tests => 1;
 use_ok 'POE::Quickie';
