@@ -1,5 +1,5 @@
 use strict;
-use warnings;
+use warnings FATAL => 'all';
 use POE;
 use POE::Quickie;
 use Test::More tests => 2;
